
  * Added hotkey display to tooltips.

  * Added option to automatically pause emulation when focus is lost.

  * Added option to toggle autofire mode.

  * Improved controller mappings for Paddles.

  * Improved controller mappings for Driving controllers.

  * Added another oddball TIA glitch option for score mode color.

  * Enhanced support for CDFJ+ bankswitching type.

  * Added ARM chip auto detection.

  * Fixed Stella crash due to invalid ZIP files.

  * Fixed TV mode auto detection in some ARM ROMs.

  * Fixed color loss when switching TV mode from/to PAL.

  * Fixed score mode glitch emulation corner case.

  * Fixed state messages staying on screen forever.

  * Debugger: added PlusROM information.

  * Debugger: fixed patching code in ZP-RAM.

-Have fun!


6.5.3 to 6.6 (November 16, 2021)

  * Added preliminary PlusROM support for saving high scores.

  * Added preliminary support for 'MVC' bankswitching scheme by
    Rob Bairos.

  * Added web links for many games.

  * Added dead zone and linearity settings for analog controllers.

  * Added 'Check for Update' button to Help dialog.

  * Added different mask patterns for scanline emulation.

  * Fixed MindLink controller.

  * Fixed SaveKey not working with QuadTari.

  * Added TIA randomization on startup option.

  * Added different debug color luminances for player and missile copies.

  * Added hotkeys for TV roll speed and toggling 'Developer settings' sets.

  * Debugger: enhanced prompt's auto complete and history.

  * Debugger: added optional logging of breaks and traps.

  * Debugger: added Thumb cycle counting.

6.5.2 to 6.5.3 (April 20, 2021)

  * Added context-sensitive help.

  * Improved support of multiple monitors with different resolutions.

  * Improved analog input reading (Paddles, Keyboards...).

  * Fixed QuadTari support for controller types other than Joysticks.

  * Fixed palette and TV effects saving for Retron77.
