@@ -21,7 +21,7 @@
     <img src="graphics/stella_icon.png">
     <h2><b>A multi-platform Atari 2600 VCS emulator</b></h2>
 
-    <h4><b>Release 6.6</b></h4>
+    <h4><b>Release 6.7</b></h4>
     <br>
 
     <h2><b>User's Guide</b></h2>
@@ -354,7 +354,6 @@
   the following:</p>
   <ul>
     <li>i386 or x86_64 class machine, with 32 or 64-bit distribution</li>
-    <li>OpenGL capable video card</li>
     <li>Other architectures (MIPS, PPC, PPC64, etc.) have been confirmed to work,
       but aren't as well tested as i386/x86_64</li>
     <li>GNU g++ v/7 or Clang v/5 (with C++17 support) and the make utility are required for compiling the Stella source code</li>
@@ -368,7 +367,6 @@
   <ul>
     <li>macOS 10.7 or above</li>
     <li>64-bit Intel processor</li>
-    <li>OpenGL capable video card</li>
     <li>Xcode 8.0 is required to compile the Stella source code</li>
   </ul>
 
@@ -379,7 +377,6 @@
   with the following:</p>
 
   <ul>
-    <li>Direct3D or OpenGL capable video card</li>
     <li>Visual C++ 2017/2019 Community is required to compile the Stella source code</li>
   </ul>
 
@@ -2759,7 +2756,7 @@
     </tr>
 
     <tr>
-      <td><pre>-video &lt;direct3d|opengl|opengles2|opengles|software&gt;</pre></td>
+      <td><pre>-video &lt;direct3d|metal|opengl|opengles2|opengles|software&gt;</pre></td>
       <td>Use the given rendering backend (where applicable); default is the best available
           mode detected.</td>
     </tr>
@@ -5064,7 +5061,8 @@ Ms Pac-Man (Stella extended codes):
       are not fully supported in the debugger.
       <table cellpadding="2" border="1">
         <tr><th>&nbsp;Type&nbsp;</th><th>Description</th><th>File Extension<br>(to force type)</th></tr>
-        <tr><td>0840 </td><td>8K ECONObanking </td><td>.084, .0840</td></tr>
+        <tr><td>0840 </td><td>8K ECONObanking</td><td>.084, .0840</td></tr>
+        <tr><td>0FA0 </td><td>8K Mania</td><td>.0FA, .0FA0</td></tr>
         <tr><td>2IN1 &#185;</td><td>4-64K Multicart (2 games)</td><td>.2N1 </td></tr>
         <tr><td>4IN1 &#185;</td><td>8-64K Multicart (4 games)</td><td>.4N1 </td></tr>
         <tr><td>8IN1 &#185;</td><td>16-64K Multicart (8 games)</td><td>.8N1 </td></tr>
