@@ -75,6 +75,8 @@ Bankswitch::Type CartDetector::autodetectType(const ByteBuffer& image, size_t si
       type = Bankswitch::Type::_3F;
     else if(isProbablyUA(image, size))
       type = Bankswitch::Type::_UA;
+    else if(isProbably0FA0(image, size))
+      type = Bankswitch::Type::_0FA0;
     else if(isProbablyFE(image, size) && !f8)
       type = Bankswitch::Type::_FE;
     else if(isProbably0840(image, size))
@@ -339,6 +341,25 @@ bool CartDetector::isProbably0840(const ByteBuffer& image, size_t size)
   };
   for(uInt32 i = 0; i < 2; ++i)
     if(searchForBytes(image, size, signature2[i], 4, 2))
+      return true;
+
+  return false;
+}
+
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+bool CartDetector::isProbably0FA0(const ByteBuffer& image, size_t size)
+{
+  // Other Brazilian (Atari Mania) ROM's bankswitching switches to bank 1 by
+  // accessing address 0xFC0 using 'BIT $FC0', 'BIT $FC0' or 'STA $FC0'
+  // Also a game (Motocross) using 'BIT $EFC0' has been found
+  static constexpr uInt8 signature[4][3] = {
+    { 0x2C, 0xC0, 0x0F },  // BIT $FC0 (H.E.R.O., Kung-Fu Master)
+    { 0x8D, 0xC0, 0x0F },  // STA $FC0 (Pole Position, Subterranea)
+    { 0xAD, 0xC0, 0x0F },  // LDA $FC0 (Front Line, Zaxxon)
+    { 0x2C, 0xC0, 0xEF }   // BIT $EFC0 (Motocross)
+  };
+  for(uInt32 i = 0; i < 4; ++i)
+    if(searchForBytes(image, size, signature[i], 3))
       return true;
 
   return false;
@@ -755,25 +776,18 @@ bool CartDetector::isProbablyTVBoy(const ByteBuffer& image, size_t size)
 bool CartDetector::isProbablyUA(const ByteBuffer& image, size_t size)
 {
   // UA cart bankswitching switches to bank 1 by accessing address 0x240
-  // using 'STA $240' or 'LDA $240'
-  // Similar Brazilian (Digivison) cart bankswitching switches to bank 1 by accessing address 0x2C0
+  // using 'STA $240' or 'LDA $240'.
+  // Brazilian (Digivison) cart bankswitching switches to bank 1 by accessing address 0x2C0
   // using 'BIT $2C0', 'STA $2C0' or 'LDA $2C0'
-  // Other Brazilian (Atari Mania) ROM's bankswitching switches to bank 1 by accessing address 0xFC0
-  // using 'BIT $FA0', 'BIT $FC0' or 'STA $FC0'
-  // Also a game (Motocross) using 'BIT $EFC0' has been found
-  static constexpr uInt8 signature[10][3] = {
+  static constexpr uInt8 signature[6][3] = {
     { 0x8D, 0x40, 0x02 },  // STA $240 (Funky Fish, Pleiades)
     { 0xAD, 0x40, 0x02 },  // LDA $240 (???)
     { 0xBD, 0x1F, 0x02 },  // LDA $21F,X (Gingerbread Man)
     { 0x2C, 0xC0, 0x02 },  // BIT $2C0 (Time Pilot)
     { 0x8D, 0xC0, 0x02 },  // STA $2C0 (Fathom, Vanguard)
     { 0xAD, 0xC0, 0x02 },  // LDA $2C0 (Mickey)
-    { 0x2C, 0xC0, 0x0F },  // BIT $FC0 (H.E.R.O., Kung-Fu Master)
-    { 0x8D, 0xC0, 0x0F },  // STA $FC0 (Pole Position, Subterranea)
-    { 0xAD, 0xC0, 0x0F },  // LDA $FC0 (Front Line, Zaxxon)
-    { 0x2C, 0xC0, 0xEF }   // BIT $EFC0 (Motocross)
   };
-  for(uInt32 i = 0; i < 10; ++i)
+  for(uInt32 i = 0; i < 6; ++i)
     if(searchForBytes(image, size, signature[i], 3))
       return true;
 
