@@ -225,6 +225,7 @@
     <ClCompile Include="..\emucore\Booster.cxx" />
     <ClCompile Include="..\emucore\Cart.cxx" />
     <ClCompile Include="..\emucore\Cart0840.cxx" />
+    <ClCompile Include="..\emucore\Cart0FA0.cxx" />
     <ClCompile Include="..\emucore\Cart2K.cxx" />
     <ClCompile Include="..\emucore\Cart3E.cxx" />
     <ClCompile Include="..\emucore\Cart3F.cxx" />
@@ -385,6 +386,7 @@
     <ClInclude Include="..\emucore\Booster.hxx" />
     <ClInclude Include="..\emucore\Cart.hxx" />
     <ClInclude Include="..\emucore\Cart0840.hxx" />
+    <ClInclude Include="..\emucore\Cart0FA0.hxx" />
     <ClInclude Include="..\emucore\Cart2K.hxx" />
     <ClInclude Include="..\emucore\Cart3E.hxx" />
     <ClInclude Include="..\emucore\Cart3F.hxx" />
